// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.mesh.v2beta1;

import "google/protobuf/duration.proto";

// HTTPRouteTimeouts defines timeouts that can be configured for an HTTPRoute
// or GRPCRoute.
message HTTPRouteTimeouts {
  // RequestTimeout is the total amount of time permitted for the entire
  // downstream request (and retries) to be processed.
  // +kubebuilder:validation:Format=duration
  google.protobuf.Duration request = 1;

  // Idle specifies the total amount of time permitted for the request stream to be idle.
  // +kubebuilder:validation:Format=duration
  google.protobuf.Duration idle = 2;
}
